<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gradians.collect.HomeActivity" >
    
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="98"
        android:icon="@drawable/ic_sign_out"
        android:showAsAction="always"
        app:showAsAction="always"
        android:title="@string/action_sign_out" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="99"
        android:icon="@drawable/ic_action_refresh"        
        app:showAsAction="ifRoom"
        android:title="@string/action_sign_refresh" />
        
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
