<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.gradians.collect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.gradians.collect.DetailActivity" >
    
    <com.gradians.collect.DullWebView
        android:id="@+id/wvCanvas"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"/>
    
    <LinearLayout
        android:id="@+id/llTopBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true">
        
        <TextView
            android:id="@+id/tvName"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
	        android:gravity="center"
	        android:textSize="22sp"
	        android:textStyle="bold"
	        android:textColor="@color/white"
            android:background="@color/gray"/>
        
        <TextView
            android:id="@+id/tvMarks"
            android:layout_weight="5"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center" />
            
        <Button
            android:id="@+id/btnBack"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text=""
            android:textSize="@dimen/small_font_size"
            android:background="@null"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onHiddenClick"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llBtnBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">
        
        <Button
            android:id="@+id/btnSelfChk"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp" 
            android:layout_marginRight="1dp"
            android:paddingTop="7dp"
            android:contentDescription="@string/capture_button"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font_size" 
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:onClick="selfCheck"
            android:drawableTop="@drawable/ic_action_mic"
            android:drawablePadding="-7dp"/>

        <TextView
            android:id="@+id/btnBuyAns"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp" 
            android:layout_marginRight="1dp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:text="@string/buy_answer_text"
            android:textSize="@dimen/small_font_size"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:clickable="true"
            android:onClick="purchase"/>
                    
        <TextView
            android:id="@+id/btnBuySoln"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp" 
            android:layout_marginRight="1dp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:text="@string/buy_soln_text"
            android:textSize="@dimen/small_font_size" 
            android:contentDescription="@string/capture_button"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:clickable="true"
            android:onClick="purchase"/>
                    
        <Button
            android:id="@+id/btnCamera" 
            android:layout_weight="1" 
            android:layout_width="0dp" 
            android:layout_height="match_parent" 
            android:layout_marginLeft="1dp" 
            android:layout_marginRight="2dp" 
            android:paddingTop="7dp"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font_size" 
            android:contentDescription="@string/capture_button" 
            android:background="@drawable/btn_selector" 
            android:gravity="center" 
            android:onClick="activateCamera"
            android:drawableTop="@android:drawable/ic_menu_camera" 
            android:drawablePadding="-7dp"/>
        
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/svCanvas"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llTopBar"
        android:layout_above="@id/llBtnBar"
        android:background="@null">
        <LinearLayout
            android:id="@+id/llCanvas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>
    
    <TextView
        android:id="@+id/btnBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:background="@color/blue"
        android:clickable="true"
        android:gravity="center"
        android:onClick="purchase"
        android:text="@string/buy_ask_text" />
    
    <android.support.v4.view.ViewPager
        android:id="@+id/vpFeedback"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:contentDescription="@string/capture_button"
        android:background="@color/gray"
        android:gravity="center"/>
    
    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/circlesFdbk"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_alignTop="@id/vpFeedback"
        android:layout_marginTop="4dp"
        app:fillColor="@color/orange"
        android:background="@null"/>
        
    
</RelativeLayout>
